2013-01-08  Anders Carlsson  <andersca@apple.com>

        Use correct capitalization in service name
        https://bugs.webkit.org/show_bug.cgi?id=106368

        Reviewed by Andreas Kling.

        * WebProcess/com.apple.WebProcess.sb.in:

2013-01-08  Anders Carlsson  <andersca@apple.com>

        Tweak sandbox profile
        https://bugs.webkit.org/show_bug.cgi?id=106362
        <rdar://problem/12884745>

        Reviewed by Sam Weinig.

        * WebProcess/com.apple.WebProcess.sb.in:
        Allow access to com.apple.CoreServices.launchservicesd.

2013-01-08  Sam Weinig  <sam@webkit.org>

        Add OWNERS file.

        * OWNERS: Added.

2013-01-08  Mark Lam  <mark.lam@apple.com>

        Removed the need for the ProposedDatabase mechanism.
        https://bugs.webkit.org/show_bug.cgi?id=106292.

        Reviewed by Sam Weinig.

        * WebProcess/WebCoreSupport/WebChromeClient.cpp:
        (WebKit::WebChromeClient::exceededDatabaseQuota):
        * WebProcess/WebCoreSupport/WebChromeClient.h:
        (WebChromeClient):

2013-01-08  Sam Weinig  <sam@webkit.org>

        Remove dead Connection members in ChildProcess subclasses (and their users)
        https://bugs.webkit.org/show_bug.cgi?id=106347
        <rdar://problem/12973955>

        Reviewed by Alexey Proskuryakov.

        This also fixes a crash when entering fullscreen with a plug-in.

        * PluginProcess/PluginProcess.h:
        Remove dead m_connection member.

        * PluginProcess/mac/PluginProcessMac.mm:
        (WebKit::PluginProcess::setModalWindowIsShowing):
        (WebKit::PluginProcess::setFullscreenWindowIsShowing):
        Replace use of m_connection, which is dead, with parentProcessConnection().

        * SharedWorkerProcess/SharedWorkerProcess.h:
        (SharedWorkerProcess):
        Remove dead m_connection member.

        * SharedWorkerProcess/SharedWorkerProcess.cpp:
        (WebKit::SharedWorkerProcess::createWebProcessConnection):